id: Fix WITHOUT_AUDIT build

Rather than add more ifdefs, trust the compiler to optimize Aflag away.

Fixes:		e8c3b8642147 ("id: Clean up")
PR:		290740
MFC after:	3 days